swap training urls from DVswitch to veyepar wiki.

--- a/dj/main/templates/approve/train.html
+++ b/dj/main/templates/approve/train.html
@@ -21,15 +21,22 @@ There are three phases to producing videos:
 <li> Produce the videos after the event.
 </ol>
 <p>
-For a large event, we will find additional people to help with #3.  What comes next is the page they will land on.  It is hard to tailor these instructions to fit everyone's role, so it is a little redundant which makes it seem like you are not on the right page.  
+For a large event, we will find additional people to help with #3.  What comes next is the page they will land on.  It is hard to tailor these instructions to fit everyone's role, so it is a little redundant which makes it seem like you are not on the right page.
 </p>
 <p>
 There are only 3 pages, and you are done with the first, so without further adieu, <strong>click to the <a href="{% url "approve_episode" episode.id episode.slug episode.edit_key %}">Volunteer page</a>.</strong>
 </p>
 <p>
-You should probably read this too: <a href="http://dvswitch.alioth.debian.org/wiki/event_volunteer/"> DVswitch/ event volunteer</a>.
+You might want to read these too:
+<ol>
+    <li>{{"https://github.com/CarlFK/veyepar/wiki/Event-Volunteer"|urlize}}</li>
+    <li>{{"https://github.com/CarlFK/veyepar/wiki/Reviewer"|urlize}}</li>
+    <li>{{"https://github.com/CarlFK/veyepar/wiki/Volunteer%3A-Video-mixer"|urlize}}</li>
+</ol>
+
 </p>
 <p>
-If you want to know everything about everything: <a href="http://dvswitch.alioth.debian.org/wiki/conference/">DVswitch/ conference</a>.  This is more for the Video team lead and maybe conference organizers.
+If you want to know everything about everything: {{"https://github.com/CarlFK/veyepar/wiki/System-Stack"|urlize}}
+
 </p>
 {% endblock %}
