the rest of the pdf test

--- a/dj/main/templates/tests.html
+++ b/dj/main/templates/tests.html
@@ -9,6 +9,8 @@
   </span>
 </form>
 
+</p><a href="samplespec.rfxml">samplespec.rfxml</a> Test pdf.</p>
+
 <p>Current test data:</p>
 <ul>
 {% for client in clients %}
