--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -30,12 +30,12 @@ Item Count: {{episodes.count|default:"(none)"}} <br>
 <br>
 
 Title slide:
-<a href='http://veyepar.ndv.cdn.nextdayvideo.com/veyepar/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}'>{{client.title_svg|default:"(none)"}}</a>
-<a href='http://veyepar.ndv.cdn.nextdayvideo.com/veyepar/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}.png'>png</a>
+<a href='{{ MEDIA_URL }}/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}'>{{client.title_svg|default:"(none)"}}</a>
+<a href='{{ MEDIA_URL }}/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}.png'>png</a>
 <a href="{% url 'title_slides' show.id %}">rendered title slides</a>
 </br>
 
-Credits: <a href='http://veyepar.ndv.cdn.nextdayvideo.com/veyepar/{{client.slug}}/{{show.slug}}/assets/credits/{{client.credits}}'>{{client.credits}}</a>
+Credits: <a href='{{ MEDIA_URL }}/{{client.slug}}/{{show.slug}}/assets/credits/{{client.credits}}'>{{client.credits}}</a>
 </br>
 </br>
 Host metadata:
