--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -6,9 +6,10 @@
 
 <script src="{{STATIC_URL}}admin/js/urlify.js"></script>
 
-<script src="{{STATIC_URL}}js/jquery-1.11.0.min.js"></script>
+<script src="{{STATIC_URL}}js/jquery.min.js"></script>
 <script src="{{STATIC_URL}}js/jquery-ui.min.js"></script>
 <script src="{{STATIC_URL}}js/jquery.cookie.js"></script>
+
 <script src="{{STATIC_URL}}js/login_form.js"></script>
 <script src="{{STATIC_URL}}js/fnitize.js"></script>
 
