+from pprint import pprint -pprint.pprint

--- a/setup/ansible/roles/site/templates/local_settings.py.j2
+++ b/setup/ansible/roles/site/templates/local_settings.py.j2
@@ -16,3 +16,11 @@ DATABASES =  {'default':
          'TEST_NAME': None,
          } }
 
+
+# GOOG_CLIENT_SECRET = "/home/{{ user_name }}/.creds/client_secret.json"
+
+# CDN={
+#        'user': '{{ user_name }}',
+#        'host': '{{ domain_name }}',
+#        'private_key_file': "/home/{{ user_name }}/.ssh/id_rsa",
+#        }
