reword approve page

--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -20,7 +20,8 @@
     <a href="{{episode.host_url}}">{{episode.host_url}}</a><br>
     {% endif %}
     {% if episode.archive_mp4_url %}
-    <a href="{{episode.archive_mp4_url}}">{{episode.archive_mp4_url}}</a><br>
+    <!-- <a href="{{episode.archive_mp4_url}}">{{episode.archive_mp4_url}}</a><br> -->
+    <a href="{{episode.archive_mp4_url}}">archive.org</a><br>
     {% endif %}
 {% endif %}
 
