--- a/dj/main/templates/approve/approve.html
+++ b/dj/main/templates/approve/approve.html
@@ -6,7 +6,7 @@
 <form action="" method="POST">
     {% csrf_token %}
     <p><b>
-        Please <a href="https://github.com/CarlFK/veyepar/wiki/Reviewer">review</a><br>
+        Please review this pre-release video.  Review instructions are <u><a href="https://github.com/CarlFK/veyepar/wiki/Reviewer#for-reviewers">here</a></u>.<br>
         Then if you feel the video is ready for the public,<br>
         {{who}}
         (or inits, or something so I have a clue who did this)<br>
