first pass at web based google auth.

--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -5,8 +5,10 @@
 {% endblock %}
 <tr class=row0><td> <a href="TEST1">{{request.path}}</a> </td></tr>
 TEST1{{request.path}}
+
 {% block content %}
 
+<a href="/main/googauth/init/">/main/googauth/init/</a></p>
 <table class=tpick>
 <tr class=row1><td><a href="{% url "start_here" %}">Start Here</a></td></tr>
 <tr class=row1><td><a href="{% url "clients" %}">Clients</a></td></tr>
