less Janky googauth url

--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -8,7 +8,7 @@ TEST1{{request.path}}
 
 {% block content %}
 
-<a href="/main/googauth/init/">/main/googauth/init/</a></p>
+<a href="/googauth/init/">/googauth/init/</a></p>
 <table class=tpick>
 <tr class=row1><td><a href="{% url "start_here" %}">Start Here</a></td></tr>
 <tr class=row1><td><a href="{% url "clients" %}">Clients</a></td></tr>
