red box around the auth steps

--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -22,7 +22,7 @@ Youtube account:
 {% else %}
     (Not Granted)<br>
     To grant permission to Next Day Video's Veyepar app:
-    <ol>
+    <ol style="border-width:3px; border-style:solid; border-color:#FF0000; padding: 1em;">
         <li> <a href='/googauth/init/'>Start Grant Process</a>
         <li> Next Day Video staff will use access to upload videos.
     </ol>
