--- a/dj/main/templates/approve/not_released.html
+++ b/dj/main/templates/approve/not_released.html
@@ -4,11 +4,12 @@
 
 {% block point %}
     <p><b>
-        Please <a href="https://github.com/CarlFK/veyepar/wiki/Reviewer">review</a><br>
-        Currently the conference database is blocking the final step of releasing your video the public.  Please contact the organizers to remove the hold that is currently in place.
+        Currently the conference database is blocking processing this video.<br>
+        If you feel this is in error, please contact the event organizers, likely they need your permission to release.
 
-        Then if you feel the video is ready for the public,<br>
-        come back to this page and there should be an "Approve" button to click.
+        Once data is syncroized, come back to this page
+        to <a href="https://github.com/CarlFK/veyepar/wiki/Reviewer">review</a><br>
+        and there should be an "Approve" button.
 
     </b></p>
 
