use django admin jquery, update jquery-ui.js

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -6,9 +6,8 @@
 
 <script src="{{STATIC_URL}}admin/js/urlify.js"></script>
 
-<script src="{{STATIC_URL}}js/jquery.min.js"></script>
-<script src="{{STATIC_URL}}js/jquery-ui.min.js"></script>
-<script src="{{STATIC_URL}}js/jquery.cookie.js"></script>
+<script src="{{STATIC_URL}}admin/js/vendor/jquery/jquery.min.js"></script>
+<script src="{{STATIC_URL}}js/vendor/jquery/jquery-ui.min.js"></script>
 
 <script src="{{STATIC_URL}}js/login_form.js"></script>
 <script src="{{STATIC_URL}}js/fnitize.js"></script>
