--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -8,6 +8,12 @@ Client: <a href="{% url "client" client.slug %}">{{ client.name }}</a></br>
 Show: <a href="{% url "episode_list" client.slug show.slug %}">{{ show.name }}</a> - <a href="{{show.conf_url}}">{{show.conf_url}}</a>
 </br>
 
+Dates: {{show_dates.start}}
+{% if show_dates.end != show_dates.start %}
+- {{show_dates.end}}
+{% endif %}
+</br>
+
 Rooms ({{locations|length}}):
 {% for location in locations %}
 <a href="{% url "admin:main_location_change" location.id%}">{{location.name}}</a>
