--- a/dj/googauth/templates/done.html
+++ b/dj/googauth/templates/done.html
@@ -10,6 +10,7 @@
 {% block content %}
 You have completed your part of the Google authorization process.<br>
 Reference:<br>
+<p>{data}</p>
 User:<br>
 <ul>
     <li>name: {{data.user.name}}</li>
