--- a/dj/main/templates/show_pipeline.html
+++ b/dj/main/templates/show_pipeline.html
@@ -8,6 +8,20 @@
 
 {% block content %}
 
+
+<script>
+ function myFunction(myint) {
+  // Get the text field
+  let text = document.getElementById('myText'+myint).innerHTML;
+
+  // Copy the text inside the text field
+  navigator.clipboard.writeText(text);
+
+  // Alert the copied text
+  alert("Copied the text: " + text );
+}
+</script>
+
 <a href="{% url "client" client.slug %}">{{ client.name }}</a>
 <a href="{% url "episode_list" client.slug show.slug%}">{{ show.name }}</a>
 </p>
@@ -32,8 +46,14 @@
   {% endif %}
         </td>
         <td> {{s.description}} </td>
-  {% if user.is_authenticated %}
-        <td> {{s.command}} </td>
+  {% if user.is_authenticated and s.command %}
+      <td>
+         <button onclick="myFunction({{ forloop.counter0 }})">
+     <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-copy js-clipboard-copy-icon m-2"> <path d="M0 6.75C0 5.784.784 5 1.75 5h1.5a.75.75 0 0 1 0 1.5h-1.5a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 0 0 .25-.25v-1.5a.75.75 0 0 1 1.5 0v1.5A1.75 1.75 0 0 1 9.25 16h-7.5A1.75 1.75 0 0 1 0 14.25Z"></path><path d="M5 1.75C5 .784 5.784 0 6.75 0h7.5C15.216 0 16 .784 16 1.75v7.5A1.75 1.75 0 0 1 14.25 11h-7.5A1.75 1.75 0 0 1 5 9.25Zm1.75-.25a.25.25 0 0 0-.25.25v7.5c0 .138.112.25.25.25h7.5a.25.25 0 0 0 .25-.25v-7.5a.25.25 0 0 0-.25-.25Z"></path> </svg>
+        </button>
+      </td>
+      <td> <div id="myText{{ forloop.counter0 }}"> {{s.command}} </div> </td>
+
   {% endif %}
 
     </tr>
@@ -42,3 +62,4 @@
 </table>
 
 {% endblock %}
+
