no trailing slash in MEDIA_URL setting.

--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -49,8 +49,8 @@ Item Count: {{episodes.count|default:"(none)"}} <br>
 <br>
 
 Title slide:
-<a href='{{ MEDIA_URL }}{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}'>{{client.title_svg|default:"(none)"}}</a>
-<a href='{{ MEDIA_URL }}{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}.png'>png</a>
+<a href='{{ MEDIA_URL }}/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}'>{{client.title_svg|default:"(none)"}}</a>
+<a href='{{ MEDIA_URL }}/{{client.slug}}/{{show.slug}}/assets/titles/{{client.title_svg}}.png'>png</a>
 <a href="{% url 'title_slides' show.id %}">rendered title slides</a>
 </br>
 
